added Google sign in function

--- a/views/layouts/prelogin.hbs
+++ b/views/layouts/prelogin.hbs
@@ -14,6 +14,8 @@
 <script type="text/javascript" src="/js/sole-config.js"></script>
 <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 <script id="facebook-jssdk" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.10"></script>
+<meta name="google-signin-client_id" content="824307770319-v35co4sbfui42q2a93hcccvk68hfpam7.apps.googleusercontent.com">
+<script src="https://apis.google.com/js/platform.js" async defer></script>
 <script type="text/javascript" src="/js/login.js"></script>
 
 </body>
