--- a/views/layouts/prelogin.hbs
+++ b/views/layouts/prelogin.hbs
@@ -15,7 +15,40 @@
 <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 <script id="facebook-jssdk" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.10"></script>
 <meta name="google-signin-client_id" content="824307770319-v35co4sbfui42q2a93hcccvk68hfpam7.apps.googleusercontent.com">
-<script src="https://apis.google.com/js/platform.js" async defer></script>
+
+<script>
+
+
+
+
+    function init() {
+
+
+        gapi.signin2.render('google-sign-in', {
+            'scope': 'https://www.googleapis.com/auth/plus.login',
+            'width': 200,
+            'height': 50,
+            'longtitle': true,
+            'theme': 'dark',
+            'onsuccess': succesfulLogin
+        });
+//
+//
+//        gapi.load('auth2', function() { // Ready.
+//            gapi.auth2.init({
+//                client_id: '824307770319-v35co4sbfui42q2a93hcccvk68hfpam7.apps.googleusercontent.com',
+//                'scope': 'https://www.googleapis.com/auth/plus.login'
+//            })
+//         });
+     }
+
+
+
+
+</script>
+
+
+<script src="https://apis.google.com/js/platform.js?onload=init" async defer></script>
 <script type="text/javascript" src="/js/login.js"></script>
 
 </body>
