--- a/views/login.hbs
+++ b/views/login.hbs
@@ -8,8 +8,8 @@
                 <div class="col s12 l6 center">
                     <!--new one-->
                     <!--<div class="g-signin2" data-onsuccess="onGoogleSignIn"></div>-->
-
-                    <div id="google-sign-in"></div>
+                    {{!-- <div id="google-sign-in"></div> --}}
+                    <div class="g-signin2" data-onsuccess="onSignIn" data-theme="dark"></div>
                 </div>
             </div>
             <form id="login-form" action="/login" method="post">
