add a helper controller to make nice session strings, change some names, clean up. starting to remove all becomes and unsafeuser things

--- a/views/login.hbs
+++ b/views/login.hbs
@@ -75,6 +75,6 @@
         </a>
     </div>
 </div>
-<form id="foobar" action="/" method="get">
-  <input type="hidden" name="token" id="token" value="">
+<form id="login-with-session" action="/" method="get">
+  <input type="hidden" name="sesh" id="sesh" value="">
 </form>
