--- a/views/partials/sidebar.hbs
+++ b/views/partials/sidebar.hbs
@@ -26,18 +26,18 @@
             <!--<a href="#email"><span class="white-text email">South High Community School</span></a>-->
         </div></li>
         <li><div class="divider"></div></li>
-        <li><a class="waves-effect waves-light btn" href="/sole-create">Plan Lesson</a></li>
+        <li><a class="waves-effect waves-light btn" href="/sole-create?sesh={{sesh}}">Plan Lesson</a></li>
         <li><div class="divider"></div></li>
-        <li><a class="waves-effect" href="/profile"><i class="material-icons">account_circle</i>My Profile</a></li>
-        <li><a class="waves-effect" href="/soles"><i class="material-icons">format_list_bulleted</i>My SOLEs</a></li>
+        <li><a class="waves-effect" href="/profile?sesh={{sesh}}"><i class="material-icons">account_circle</i>My Profile</a></li>
+        <li><a class="waves-effect" href="/soles?sesh={{sesh}}"><i class="material-icons">format_list_bulleted</i>My SOLEs</a></li>
         <li><div class="divider"></div></li>
-        <li><a class="waves-effect" href="/questions"><i class="material-icons">help</i>Explore Questions</a></li>
-        <li><a class="waves-effect" href="/questions/add"><i class="material-icons">create</i>Add a Question</a></li>
+        <li><a class="waves-effect" href="/questions?sesh={{sesh}}"><i class="material-icons">help</i>Explore Questions</a></li>
+        <li><a class="waves-effect" href="/questions/add?sesh={{sesh}}"><i class="material-icons">create</i>Add a Question</a></li>
         <li><div class="divider"></div></li>
         {{!-- <li><a class="waves-effect" href="/map"><i class="material-icons">public</i>Community Map</a></li> --}}
-        <li><a class="waves-effect" href="/how" ><i class="material-icons">record_voice_over</i>How to SOLE</a></li>
-        <li><a class="waves-effect" href="/history" ><i class="material-icons">history</i>History of StartSOLE</a></li>
-        <li><a class="waves-effect" href="/resources"><i class="material-icons">assignment</i>Teacher Resources<span class="new badge">4</span></a></li>
+        <li><a class="waves-effect" href="/how?sesh={{sesh}}" ><i class="material-icons">record_voice_over</i>How to SOLE</a></li>
+        <li><a class="waves-effect" href="/history?sesh={{sesh}}" ><i class="material-icons">history</i>History of StartSOLE</a></li>
+        <li><a class="waves-effect" href="/resources?sesh={{sesh}}"><i class="material-icons">assignment</i>Teacher Resources<span class="new badge">4</span></a></li>
         <li><div class="divider"></div></li>
         <li><a class="waves-effect waves-light btn red hide-on-large-only hide-on-extra-large-only hide-on-small-and-down" href="/logout"><!--<i
         class="material-icons">exit_to_app</i>-->Logout</a></li>
