complete profile view and in progress route

--- a/views/complete-profile.hbs
+++ b/views/complete-profile.hbs
@@ -25,48 +25,53 @@
                 <div class="input-field col s12">
                     <select name="role">
                         <option value="" disabled selected>Choose your option</option>
-                        <option value="1">Option 1</option>
-                        <option value="2">Option 2</option>
-                        <option value="3">Option 3</option>
+                        <option value="user.role.teacher">Teacher</option>
+                        <option value="user.role.preservice_teacher">Pre-service Teacher</option>
+                        <option value="user.role.administrator">Administrator</option>
+                        <option value="user.role.coach">Coach</option>
+                        <option value="user.role.out_of_school_educator">Out of School Educator</option>
+                        <option value="user.role.parent">Parent</option>
+                        <option value="user.role.other">Other</option>
                     </select>
                     <label>What's your primary role?</label>
                 </div>
             </div>
 
-
-            <div class="input-field col s12">
-                <select multiple name="grade">
-                    <option value="" disabled>Choose your option</option>
-                    <option value="edu.pre-k">Preschool</option>
-                    <option value="edu.k">Kindergarten</option>
-                    <option value="edu.1">Grade 1</option>
-                    <option value="edu.2">Grade 2</option>
-                    <option value="edu.3">Grade 3</option>
-                    <option value="edu.4">Grade 4</option>
-                    <option value="edu.5">Grade 5</option>
-                    <option value="edu.6">Grade 6</option>
-                    <option value="edu.7">Grade 7</option>
-                    <option value="edu.8">Grade 8</option>
-                    <option value="edu.9">Grade 9</option>
-                    <option value="edu.10">Grade 10</option>
-                    <option value="edu.11">Grade 11</option>
-                    <option value="edu.12">Grade 12</option>
-
-                </select>
-                <label>What grade(s) do you teach?</label>
+            <div class="row">
+                <div class="input-field col s12">
+                    <select multiple name="grade">
+                        <option value="" disabled>Choose your option</option>
+                        <option value="edu.pre-k">Preschool</option>
+                        <option value="edu.k">Kindergarten</option>
+                        <option value="edu.1">First Grade</option>
+                        <option value="edu.2">Second Grade</option>
+                        <option value="edu.3">Third Grade</option>
+                        <option value="edu.4">Fourth Grade</option>
+                        <option value="edu.5">Fifth Grade</option>
+                        <option value="edu.6">Sixth Grade</option>
+                        <option value="edu.7">Seventh Grade</option>
+                        <option value="edu.8">Eighth Grade</option>
+                        <option value="edu.9">Ninth Grade</option>
+                        <option value="edu.10">Tenth Grade</option>
+                        <option value="edu.11">Eleventh Grade</option>
+                        <option value="edu.12">Twelfth Grade</option>
+                    </select>
+                    <label>What grade(s) do you teach?</label>
+                </div>
             </div>
 
-            <div class="input-field col s12">
-                <select multiple name="subject">
-                    <option value="" disabled>Choose your option</option>
-                    <option value="1">Option 1</option>
-                    <option value="2">Option 2</option>
-                    <option value="3">Option 3</option>
-                </select>
-                <label>What subject(s) do you teach?</label>
+            <div class="row">
+                <div class="input-field col s12">
+                    <select multiple name="subject">
+                        <option value="" disabled>Choose your option</option>
+                        <option value="1">Option 1</option>
+                        <option value="2">Option 2</option>
+                        <option value="3">Option 3</option>
+                    </select>
+                    <label>What subject(s) do you teach?</label>
+                </div>
             </div>
 
-            dgfsf
         </div>
     </div>
 </div>
