--- a/views/login.hbs
+++ b/views/login.hbs
@@ -75,6 +75,6 @@
         </a>
     </div>
 </div>
-<form id="login-with-session" action="/" method="get">
+<form id="login-with-session" action="/complete-profile" method="get">
   <input type="hidden" name="sesh" id="sesh" value="">
 </form>
