--- a/views/partials/sidebar.hbs
+++ b/views/partials/sidebar.hbs
@@ -19,7 +19,7 @@
         <li><div class="user-view">
             <div class="white center-align">
                 <!--<img src="/images/office.jpg">-->
-                <a href="/"><img src="/images/logo.png"></a>
+                <a href="/?sesh={{sesh}}"><img src="/images/logo.png"></a>
             </div>
             <!--<a href="#user"><img class="circle" src="/images/yuna.jpg"></a>-->
             <!--<a href="#name"><span class="white-text name">Justin Duffy</span></a>-->
