sesh token in nested loops

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -48,7 +48,7 @@ No completed SOLEs yet
 			<h3>My questions:</h3>
 			<ul>
 			{{#each questions.mine}}
-				<li> <a href="/questions/{{id}}?sesh={{sesh}}">{{text}}</a> </li>
+				<li> <a href="/questions/{{id}}?sesh={{../sesh}}">{{text}}</a> </li>
 			{{/each}}
 			</ul>
 
