--- a/views/partials/question-card.hbs
+++ b/views/partials/question-card.hbs
@@ -2,7 +2,7 @@
    style="-webkit-animation-duration:300ms;">
   <div class="card blue lighten-1">
     <div class="question-card card-content center-align">
-      <a href="/questions/{{id}}?sesh={{sesh}}">
+      <a href="/questions/{{id}}?sesh={{../sesh}}">
       <div class="card-title white-text">{{text}}</div>
       </a>
 
