--- a/views/resources.hbs
+++ b/views/resources.hbs
@@ -1,5 +1,5 @@
 <div class="breadcrumb-wrapper">
-    <a href="/" class="breadcrumb">Home</a>
+    <a href="/?sesh={{sesh}}" class="breadcrumb">Home</a>
     <a class="breadcrumb">Resources</a>
 </div>
 
@@ -44,5 +44,3 @@
         </div>
     </div>
 </div>
-
-
