--- a/views/soles.hbs
+++ b/views/soles.hbs
@@ -1,5 +1,5 @@
 <div class="breadcrumb-wrapper">
-    <a href="/" class="breadcrumb">Home</a>
+    <a href="/?sesh={{sesh}}" class="breadcrumb">Home</a>
     <a class="breadcrumb">My SOLEs</a>
 </div>
 
@@ -48,7 +48,7 @@
                                     <div class="row center-align">
                                         <img class="hide-on-small-only" src="/images/logos/logo.svg">
                                         <h5 style="margin-bottom: 1em;">Let's get started</h5>
-                                        <a class="waves-effect waves-light btn-large" href="/sole-create">Plan A Lesson</a>
+                                        <a class="waves-effect waves-light btn-large" href="/sole-create?sesh={{sesh}}">Plan A Lesson</a>
                                     </div>
                                 </div>
                             </div>
