--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -1,5 +1,5 @@
 <div class="breadcrumb-wrapper">
-    <a href="/" class="breadcrumb">Home</a>
+    <a href="/?sesh={{sesh}}" class="breadcrumb">Home</a>
     <a class="breadcrumb">My Profile</a>
 </div>
 
