--- a/views/resources.hbs
+++ b/views/resources.hbs
@@ -21,8 +21,7 @@
                                             <div class="card-content">
                                                 <span class="card-title">{{title}}</span>
                                                 <p class="short-description">{{short}}</p>
-                                                <p class="long-description">{{description}}</p>
-
+                                                <p class="text-description hide-on-large-only">{{description}}</p>
                                                 {{#each authors}}
                                                 <p>Created by <a href="mailto:{{email}}"
                                                          target="_top">{{name}}</a></p>
